# xxmake-demo

automake/: Makefile.am  configure.ac  dyn.cpp
cmake/: CMakeLists.txt  dyn.h  main.cpp  sta.h
make/: Makefile  main  sta.cpp
